Stop setup panel from seizing up on smaller screens

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -127,7 +127,7 @@ main {
 }
 
 .config-action-area {
-	margin-top: 120px;
+	margin-top: 110px;
 	opacity: 1;
 	transition: opacity 0.3s;
 }
@@ -150,7 +150,7 @@ main {
 
 form {
 	position: relative;
-	margin-top: 34px;
+	margin-top: 12px;
 	text-align: center;
 }
 
@@ -164,7 +164,7 @@ input {
 	padding: 9px 13px;
 	font-size: 15px;
 	border: 1.5px solid lightgrey;
-	width: 282px;
+	width: calc(50% - 40px);
 }
 
 input, #login-button {
@@ -191,7 +191,7 @@ input:focus {
 #login-button {
 	position: relative;
 	color: white;
-	margin-top: 21px;
+	margin-top: 10px;
 	padding: 10px;
 	font-size: 19px;
 	border: none;
